<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/liner_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1"
        tools:context=".activities.LoginActivity">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="82dp"
            android:background="@drawable/my_button_bg_light"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/my_button_bg_light"
            android:hint="@string/hint_email"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/my_button_bg_light"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/my_button_bg_light"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:textColor="@android:color/white" />

        <android.support.v7.widget.AppCompatButton
            android:onClick="toSignUpClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_light"
            android:text="@string/text_register_now" />

        <android.support.v7.widget.AppCompatTextView
            android:onClick="toSignInClick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/txt_for_auth"
            android:textSize="16sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/back_button"
            android:gravity="center"
            android:onClick="toSignInClick"
            android:text="@string/text_login"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>
